--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,5 +26,8 @@
     "main": "main",
     "notifications":"notifications",
     "profile":"account",
-    "my-reservations":"my reservations"
+    "my-reservations":"my reservations",
+    "please enter user name":"please enter user name",
+    "user name should be min 2 chars long":"user name should be min 2 chars long",
+    "please enter phone number":"please enter phone number"
 }
