--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -38,7 +38,8 @@
     "categories":"الأقسام",
     "show all":"عرض الكل",
     "rests":"استراحات",
-    "nearby places":"أماكن قريبة منك"
+    "nearby places":"أماكن قريبة منك",
+    "phone number should be 10 numbers":"رقم الجوال لا يقل عن ١٠ ارقام"
     
     
 }
