--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,5 +38,6 @@
     "categories":"categories",
     "show all":"show all",
     "rests":"rests",
-    "nearby places":"nearby places"
+    "nearby places":"nearby places",
+    "phone number should be 10 numbers":"phone number should be 10 numbers"
 }
