--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,8 @@
     "categories":"categories",
     "show all":"show all",
     "rests":"rests",
+    "chalets":"chalets"  ,
     "nearby places":"nearby places",
-    "phone number should be 10 numbers":"phone number should be 10 numbers"
+    "phone number should be 10 numbers":"phone number should be 10 numbers",
+    "details":"details"
 }
