--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,45 +1,45 @@
 {
-    "choose_langauge":"اختر اللغة المناسبة",
-    "arabic":"اللغة العربية",
-    "english":"اللغة الانجليزية",
-    "start":"ابدأ",
-    "test_title":"عنوان تجريبي",
-    "test_subtitle":"هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص",
-    "next":"التالي",
-    "skip":"تخطي",
-    "register":"مستخدم جديد",
-    "signin":"تسجيل دخول",
-    "sign-up":"تسجيل",
-    "login":"دخول",
-    "user-name":"اسم المستخدم",
-    "phone-number":"رقم الجوال",
-    "email-address":"البريد الالكتروني",
-    "password":"كلمة المرور",
-    "confirm-password":"تأكيد كلمة المرور",
-    "forget-password":"هل نسيت كلمة المرور؟",
-    "have an account":"لدي حساب بالفعل",
-    "password-change":"تغيير كلمة المرور",
-    "confirm":"تأكيد",
-    "enter phone-number to send code":"ادخل رقم الجوال الخاص بك لارسال كود التفعيل",
-    "enter code sent to mobile":"ادخل كود التفعيل المرسل على رقم الجوال",
-    "code-verification":"كود التفعيل",
-    "main":"الرئيسية",
-    "notifications":"الأشعارات",
-    "profile":"حسابي",
-    "my-reservations":"حجوزاتي",
-    "please enter user name":"من فضلك ادخل الاسم",
-    "user name should be min 2 chars long":"كلمة المرور لا تقل عن حرفين",
-    "please enter phone number":"من فضلك ادخل رقم الجوال",
-    "please enter email":"من فضلك ادخل البريد الالكتروني",
-    "please enter valid email":"من فضلك ادخل بريد الكتروني صالح",
-    "please enter password":"ادخل كلمة المرور",
-    "both password and confirm password should be equal":"كلمتا المرور غير متطابقتان",
-    "search here":"ابحث هنا ",
-    "categories":"الأقسام",
-    "show all":"عرض الكل",
-    "rests":"استراحات",
-    "nearby places":"أماكن قريبة منك",
-    "phone number should be 10 numbers":"رقم الجوال لا يقل عن ١٠ ارقام"
-    
-    
+  "choose_langauge": "اختر اللغة المناسبة",
+  "arabic": "اللغة العربية",
+  "english": "اللغة الانجليزية",
+  "start": "ابدأ",
+  "test_title": "عنوان تجريبي",
+  "test_subtitle": "هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص",
+  "next": "التالي",
+  "skip": "تخطي",
+  "register": "مستخدم جديد",
+  "signin": "تسجيل دخول",
+  "sign-up": "تسجيل",
+  "login": "دخول",
+  "user-name": "اسم المستخدم",
+  "phone-number": "رقم الجوال",
+  "email-address": "البريد الالكتروني",
+  "password": "كلمة المرور",
+  "confirm-password": "تأكيد كلمة المرور",
+  "forget-password": "هل نسيت كلمة المرور؟",
+  "have an account": "لدي حساب بالفعل",
+  "password-change": "تغيير كلمة المرور",
+  "confirm": "تأكيد",
+  "enter phone-number to send code": "ادخل رقم الجوال الخاص بك لارسال كود التفعيل",
+  "enter code sent to mobile": "ادخل كود التفعيل المرسل على رقم الجوال",
+  "code-verification": "كود التفعيل",
+  "main": "الرئيسية",
+  "notifications": "الاشعارات",
+  "profile": "حسابي",
+  "my-reservations": "حجوزاتي",
+  "please enter user name": "من فضلك ادخل الاسم",
+  "user name should be min 2 chars long": "كلمة المرور لا تقل عن حرفين",
+  "please enter phone number": "من فضلك ادخل رقم الجوال",
+  "please enter email": "من فضلك ادخل البريد الالكتروني",
+  "please enter valid email": "من فضلك ادخل بريد الكتروني صالح",
+  "please enter password": "ادخل كلمة المرور",
+  "both password and confirm password should be equal": "كلمتا المرور غير متطابقتان",
+  "search here": "ابحث هنا ",
+  "categories": "الأقسام",
+  "show all": "عرض الكل",
+  "rests": "استراحات",
+  "chalets": "شاليهات",
+  "nearby places": "أماكن قريبة منك",
+  "phone number should be 10 numbers": "رقم الجوال لا يقل عن ١٠ ارقام",
+  "details": "تفاصيل"
 }
