--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -41,5 +41,6 @@
   "chalets": "شاليهات",
   "nearby places": "أماكن قريبة منك",
   "phone number should be 10 numbers": "رقم الجوال لا يقل عن ١٠ ارقام",
-  "details": "تفاصيل"
+  "details": "تفاصيل",
+  "edit profile":"تعديل حسابي"
 }
