--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,5 +41,6 @@
     "chalets":"chalets"  ,
     "nearby places":"nearby places",
     "phone number should be 10 numbers":"phone number should be 10 numbers",
-    "details":"details"
+    "details":"details",
+    "edit profile":"edit profile"
 }
