--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -42,5 +42,6 @@
   "nearby places": "أماكن قريبة منك",
   "phone number should be 10 numbers": "رقم الجوال لا يقل عن ١٠ ارقام",
   "details": "تفاصيل",
-  "edit profile":"تعديل حسابي"
+  "edit profile":"تعديل حسابي",
+  "save":"حفظ"
 }
