--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,5 +42,6 @@
     "nearby places":"nearby places",
     "phone number should be 10 numbers":"phone number should be 10 numbers",
     "details":"details",
-    "edit profile":"edit profile"
+    "edit profile":"edit profile",
+    "save":"save"
 }
