--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -43,5 +43,7 @@
   "phone number should be 10 numbers": "رقم الجوال لا يقل عن ١٠ ارقام",
   "details": "تفاصيل",
   "edit profile":"تعديل حسابي",
-  "save":"حفظ"
+  "save":"حفظ",
+  "old":"سابقة",
+  "current":"حالية"
 }
