--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -45,5 +45,6 @@
   "edit profile":"تعديل حسابي",
   "save":"حفظ",
   "old":"سابقة",
-  "current":"حالية"
+  "current":"حالية",
+  "my-reservations-details":"تفاصيل الحجز"
 }
