--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -45,5 +45,6 @@
     "edit profile":"edit profile",
     "save":"save",
     "old":"old",
-    "current":"current"
+    "current":"current",
+    "my-reservations-details": "my-reservations-details"
 }
