--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -46,5 +46,6 @@
   "save":"حفظ",
   "old":"سابقة",
   "current":"حالية",
-  "my-reservations-details":"تفاصيل الحجز"
+  "my-reservations-details":"تفاصيل الحجز",
+  "search-filter":"فلتر البحث"
 }
