--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,5 +46,7 @@
     "save":"save",
     "old":"old",
     "current":"current",
-    "my-reservations-details": "my-reservations-details"
+    "my-reservations-details": "my-reservations-details",
+     "search-filter":"search-filter"
+
 }
