--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -54,5 +54,6 @@
   "contact-us":"اتصل بنا",
   "policy":"سياسة الخصوصية",
   "about":"عن التطبيق",
-  "favourites":"المفضلة"
+  "favourites":"المفضلة",
+  "logout":"تسجيل خروج"
 }
