--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,6 +54,7 @@
   "contact-us":"contact us",
   "policy":"policy",
   "about":"about",
-  "favourites":"favourites"
+  "favourites":"favourites",
+  "logout":"logout"
 
 }
