--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -55,5 +55,7 @@
   "policy":"سياسة الخصوصية",
   "about":"عن التطبيق",
   "favourites":"المفضلة",
-  "logout":"تسجيل خروج"
+  "logout":"تسجيل خروج",
+  "send":"ارسل",
+  "your message":"رسالتك"
 }
