--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -63,5 +63,8 @@
   "place-images":"صور المكان",
   "map":"الخريطة",
   "reservation-rules":"شروط الحجز",
-  "reserve now":"احجز الأن"
+  "reserve now":"احجز الأن",
+  "reservation":"الحجز",
+  "complete reservation":"استكمال الحجز",
+  "confirm reservation":"تأكيد الحجز"
 }
