--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -66,5 +66,6 @@
   "reserve now":"احجز الأن",
   "reservation":"الحجز",
   "complete reservation":"استكمال الحجز",
-  "confirm reservation":"تأكيد الحجز"
+  "confirm reservation":"تأكيد الحجز",
+  "fees":"التكاليف"
 }
