--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,6 +66,7 @@
   "reserve now":"reserve now",
   "reservation":"reservation",
   "complete reservation":"complete reservation",
-  "confirm reservation":"confirm reservation"
+  "confirm reservation":"confirm reservation",
+  "fees":"fees"
 
 }
