--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -69,5 +69,6 @@
   "confirm reservation":"تأكيد الحجز",
   "fees":"التكاليف",
   "pay on arrival":"الدفع عند الوصول",
-  "total":"المجموع"
+  "total":"المجموع",
+  "search results filter":"تصفية نتائج البحث"
 }
