--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,6 +69,7 @@
   "confirm reservation":"confirm reservation",
   "fees":"fees",
   "pay on arrival":"pay on arrival",
-  "total":"total"
+  "total":"total",
+  "search results filter":"search results filter"
 
 }
