--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -70,5 +70,36 @@
   "fees":"التكاليف",
   "pay on arrival":"الدفع عند الوصول",
   "total":"المجموع",
-  "search results filter":"تصفية نتائج البحث"
+  "search results filter":"تصفية نتائج البحث",
+  "search with place name":"بحث باسم المكان",
+  "choose place":"اختر المكان",
+  "choose city":"اختر المدينة",
+  "choose neighborhood":"اختر الحي",
+  "rooms number":"عدد الغرف",
+  "people number":"عدد الاشخاص",
+  "determine space":"تحديد المساحة (م2)",
+  "determine price":"تحديد السعر",
+  "ok":"اختيار",
+  "cancel":"الغاء",
+  "least space":"أقل مساحة",
+  "highest space":"أعلي مساحة",
+  "least price":"اقل سعر",
+  "highest price":"اعلي سعر",
+  "Miscellaneous":"المنوعات",
+  "show available only":"اظهر المتاح فقط",
+  "show offers only":"اظهر العروض فقط",
+  "Categories":"الفئات",
+  "events":"المناسبات",
+  "couples":"أزواج",
+  "travelers":"مسافرين",
+  "families":"عوائل",
+  "singles":"عزاب",
+  "facilities":"المرافق",
+  "car entrance":"مدخل سيارة",
+  "Maid's room":"غرفة خادمة",
+  "driver's room":"غرفة سائق",
+  "pool":"مسبح",
+  "elevator":"مصعد",
+  "Basement":"قبو",
+  "search":"بحث"
 }
