--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -60,7 +60,7 @@
   "your message":  "your message",
   "description":"description",
   "chalet":"chalet",
-  "place-images": "place-images",
+  "place-images": "place images",
   "map":"map",
   "reservation-rules":"reservation-rules",
   "reserve now":"reserve now",
@@ -70,6 +70,37 @@
   "fees":"fees",
   "pay on arrival":"pay on arrival",
   "total":"total",
-  "search results filter":"search results filter"
+  "search results filter":"search results filter",
+  "search with place name":"search with place name",
+  "choose place":"choose place",
+  "choose city":"choose city",
+  "choose neighborhood":"choose neighborhood",
+  "rooms number":"rooms number",
+  "people number":"people number",
+  "determine space":"determine space (m 2)",
+  "determine price":"determine price",
+  "ok":"ok",
+  "cancel":"cancel",
+  "least space":"least space",
+  "highest space":"highest space",
+  "least price":"least price",
+  "highest price":"highest price",
+  "Miscellaneous":"miscellaneous",
+  "show available only": "show available only",
+  "show offers only": "show offers only",
+  "Categories":"categories",
+  "events":  "events",
+  "couples":"couples",
+  "travelers":"travelers",
+  "families":"families",
+  "singles":"singles",
+  "facilities":"facilities",
+  "car entrance":"car entrance",
+  "Maid's room":"maid's room",
+  "driver's room":"driver's room",
+  "pool":"pool",
+  "elevator": "elevator",
+  "Basement": "basement",
+  "search": "search"
 
 }
