--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,7 +62,7 @@
   "chalet":"chalet",
   "place-images": "place images",
   "map":"map",
-  "reservation-rules":"reservation-rules",
+  "reservation-rules":"reservation rules",
   "reserve now":"reserve now",
   "reservation":"reservation",
   "complete reservation":"complete reservation",
