--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">dalel</string>
-    <string name="title_activity_main">dalel</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">دليل</string>
+    <string name="title_activity_main">دليل</string>
+    <string name="package_name">com.efada.dalel</string>
+    <string name="custom_url_scheme">com.efada.dalel</string>
 </resources>
