refactor custom card

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -101,5 +101,7 @@
   "pool":"مسبح",
   "elevator":"مصعد",
   "Basement":"قبو",
-  "search":"بحث"
+  "search":"بحث",
+  "one night":"ليلة واحدة",
+  "currency":"ر.س"
 }
