--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -101,6 +101,8 @@
   "pool":"pool",
   "elevator": "elevator",
   "Basement": "basement",
-  "search": "search"
+  "search": "search",
+  "one night":"one night",
+  "currency":"SR"
 
 }
