--- a/ios/App/App/public/assets/i18n/ar.json
+++ b/ios/App/App/public/assets/i18n/ar.json
@@ -49,6 +49,7 @@
   "my-reservations-details":"تفاصيل الحجز",
   "search-filter":"فلتر البحث",
   "arrival-date":"تاريخ الوصول",
+  "left-date":"تاريخ المغادرة",
   "search-results":"نتائج البحث",
   "please enter search text":"من فضلك ادخل كلمه البحث",
   "contact-us":"اتصل بنا",
