--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,7 @@
   "my-reservations-details": "reservation details",
   "search-filter": "search-filter",
   "arrival-date": "arrival-date",
+  "left-date":"left date",
   "search-results": "search results",
   "please enter search text":"please enter search text",
   "contact-us":"contact us",
