guards +style refactor

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -104,5 +104,6 @@
   "Basement":"قبو",
   "search":"بحث",
   "one night":"ليلة واحدة",
-  "currency":"ر.س"
+  "currency":"ر.س",
+  "please choose from and to dates":"من فضلك اختر تواريخ الوصول والمغادرة"
 }
