--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,6 +104,7 @@
   "Basement": "basement",
   "search": "search",
   "one night":"one night",
-  "currency":"SR"
+  "currency":"SR",
+  "please choose from and to dates":"please choose from and to dates"
 
 }
