--- a/ios/App/App/public/assets/i18n/en.json
+++ b/ios/App/App/public/assets/i18n/en.json
@@ -105,6 +105,7 @@
   "search": "search",
   "one night":"one night",
   "currency":"SR",
-  "please choose from and to dates":"please choose from and to dates"
+  "please choose from and to dates":"please choose from and to dates",
+  "please login first":"please login first"
 
 }
