--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -105,5 +105,6 @@
   "search":"بحث",
   "one night":"ليلة واحدة",
   "currency":"ر.س",
-  "please choose from and to dates":"من فضلك اختر تواريخ الوصول والمغادرة"
+  "please choose from and to dates":"من فضلك اختر تواريخ الوصول والمغادرة",
+  "please login first":"من فضلك سجل اولا"
 }
