--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,6 +106,6 @@
   "one night":"one night",
   "currency":"SR",
   "please choose from and to dates":"please choose from and to dates",
-  "please login first":"please login first"
-
+  "please login first":"please login first",
+  "confirm delete this notification":"confirm delete this notification ?"
 }
