--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -107,5 +107,6 @@
   "currency":"ر.س",
   "please choose from and to dates":"من فضلك اختر تواريخ الوصول والمغادرة",
   "please login first":"من فضلك سجل اولا",
-  "confirm delete this notification":"تأكيد حذف هذا الاشعار؟"
+  "confirm delete this notification":"تأكيد حذف هذا الاشعار؟",
+  "login now":"قم بالتسجيل الآن"
 }
