--- a/ios/App/App/public/assets/i18n/en.json
+++ b/ios/App/App/public/assets/i18n/en.json
@@ -107,5 +107,6 @@
   "currency":"SR",
   "please choose from and to dates":"please choose from and to dates",
   "please login first":"please login first",
-  "confirm delete this notification":"confirm delete this notification ?"
+  "confirm delete this notification":"confirm delete this notification ?",
+  "login now":"login now"
 }
