--- a/ios/App/App/public/assets/i18n/ar.json
+++ b/ios/App/App/public/assets/i18n/ar.json
@@ -108,5 +108,6 @@
   "please choose from and to dates":"من فضلك اختر تواريخ الوصول والمغادرة",
   "please login first":"من فضلك سجل اولا",
   "confirm delete this notification":"تأكيد حذف هذا الاشعار؟",
-  "login now":"قم بالتسجيل الآن"
+  "login now":"قم بالتسجيل الآن",
+  "no-notifications":"لا توجد اشعارات"
 }
