--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -112,5 +112,8 @@
   "no-notifications":"لا توجد اشعارات",
   "confirm logout":"تأكيد تسجيل الخروج؟",
   "connection error":"خطا في الاتصال بالانترنت",
-  "you are blocked.Contact with management":"تم حظر هذا الاكونت .تواصل مع الادارة"
+  "you are blocked.Contact with management":"تم حظر هذا الاكونت .تواصل مع الادارة",
+  "change password":"تغيير كلمة المرور",
+"please enter code verification":"ادخل كود التفعيل المرسل لجوالك",
+"code verification should be 4 numbers":"كود التفعيل ٤ ارقام"
 }
