--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,5 +115,8 @@
   "you are blocked.Contact with management":"you are blocked.Contact with management",
   "change password":"change password",
   "please enter code verification":"please enter code verification",
-  "code verification should be 4 numbers":"code verification should be 4 numbers"
+  "code verification should be 4 numbers":"code verification should be 4 numbers",
+  "settings":"settings",
+  "change langauge":"change langauge",
+  "change":"change"
 }
