--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -77,6 +77,9 @@
   "choose city":"اختر المدينة",
   "choose neighborhood":"اختر الحي",
   "rooms number":"عدد الغرف",
+  "room":"غرفة",
+  "meter square":"م2",
+  "bathroom":"حمام",
   "people number":"عدد الاشخاص",
   "determine space":"تحديد المساحة (م2)",
   "determine price":"تحديد السعر",
