--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,6 +77,9 @@
   "choose city":"choose city",
   "choose neighborhood":"choose neighborhood",
   "rooms number":"rooms number",
+  "room":"room",
+  "meter square":"m 2",
+  "bathroom": "bathroom",
   "people number":"people number",
   "determine space":"determine space (m 2)",
   "determine price":"determine price",
