--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -121,5 +121,6 @@
 "code verification should be 4 numbers":"كود التفعيل ٤ ارقام",
 "settings":"الاعدادات",
 "change langauge":"تغيير لغة التطبيق",
-"change":"تغيير "
+"change":"تغيير ",
+"rooms":"غرف"
 }
