--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,5 +121,6 @@
   "code verification should be 4 numbers":"code verification should be 4 numbers",
   "settings":"settings",
   "change langauge":"change langauge",
-  "change":"change"
+  "change":"change",
+  "rooms":"rooms"
 }
