--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -122,5 +122,6 @@
 "settings":"الاعدادات",
 "change langauge":"تغيير لغة التطبيق",
 "change":"تغيير ",
-"rooms":"غرف"
+"rooms":"غرف",
+"choose payment method":"من فضلك قم باختيار طريقه الدفع"
 }
