--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,5 +122,6 @@
   "settings":"settings",
   "change langauge":"change langauge",
   "change":"change",
-  "rooms":"rooms"
+  "rooms":"rooms",
+  "choose payment method":"choose payment method"
 }
