--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -81,7 +81,8 @@
   "meter square":"م2",
   "bathroom":"حمام",
   "people number":"عدد الاشخاص",
-  "determine space":"تحديد المساحة (م2)",
+  "determine space":"تحديد المساحة",
+  "meter":"م",
   "determine price":"تحديد السعر",
   "ok":"تأكيد",
   "cancel":"الغاء",
