--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,7 +81,8 @@
   "meter square":"m 2",
   "bathroom": "bathroom",
   "people number":"people number",
-  "determine space":"determine space (m 2)",
+  "determine space":"determine space",
+  "meter":"m",
   "determine price":"determine price",
   "ok":"ok",
   "cancel":"cancel",
