--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -122,6 +122,7 @@
 "code verification should be 4 numbers":"كود التفعيل ٤ ارقام",
 "settings":"الاعدادات",
 "change langauge":"تغيير لغة التطبيق",
+"choose langauge":"اختيار لغةالتطبيق",
 "change":"تغيير ",
 "rooms":"غرف",
 "choose payment method":"من فضلك قم باختيار طريقه الدفع",
