--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,6 +122,7 @@
   "code verification should be 4 numbers":"code verification should be 4 numbers",
   "settings":"settings",
   "change langauge":"change langauge",
+  "choose langauge":"choose langauge",
   "change":"change",
   "rooms":"rooms",
   "choose payment method":"choose payment method",
